[package]
name = "provide"
version = "0.3.1"
authors = ["Adam Keating <adamkeating@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
aws-types = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.18-alpha",package = "aws-types" }
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.18-alpha", package = "aws-config" }
aws-sdk-ssm = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.18-alpha", package = "aws-sdk-ssm" }
regex = "1.5.4"
clap = "2.33.3"
dirs = "4.0.0"
lazy_static = "1.4.0"
base64 = "0.13.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"

[build-dependencies]
anyhow = "1.0"
