[package]
name = "provide"
version = "0.3.0"
authors = ["Adam Keating <adamkeating@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
aws-types = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.16-alpha",package = "aws-types" }
aws-auth-providers = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.16-alpha",package = "aws-auth-providers" }
aws-sdk-ssm = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.16-alpha", package = "aws-sdk-ssm" }
regex = "1.4.2"
clap = "2.33.1"
dirs = "3.0.1"
lazy_static = "1.4.0"
base64 = "0.13.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"

[build-dependencies]
anyhow = "1.0"
