[package]
name = "provide"
version = "0.3.3"
authors = ["Adam Keating <adamkeating@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
aws-config = "0.6.0"
aws-sdk-ssm = "0.6.0"
regex = "1.5.4"
clap = "2.33.3"
dirs = "4.0.0"
lazy_static = "1.4.0"
base64 = "0.13.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
tokio-stream = "0.1"

[build-dependencies]
anyhow = "1.0"
